--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.7.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
