--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "mongodb": "^6.4.0",
     "next": "14.1.2",
     "react": "^18",
