--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "dayjs": "^1.11.10",
     "mongodb": "^6.4.0",
+    "negotiator": "^0.6.3",
     "next": "14.1.2",
+    "next-intl": "^3.9.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
