--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "negotiator": "^0.6.3",
     "next": "14.1.2",
     "next-intl": "^3.9.4",
+    "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
