--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.4",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "mongodb": "^6.4.0",
     "negotiator": "^0.6.3",
     "next": "14.1.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/lodash": "^4.14.202",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
