--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.2",
     "next-intl": "^3.9.4",
     "next-pwa": "^5.6.0",
+    "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2"
