--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.14",
     "immer": "^10.0.4",
     "lodash": "^4.17.21",
     "mongodb": "^6.4.0",
