--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
+    "postcss-import": "^16.0.1",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
