--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8",
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.1.0",
+    "postcss-preset-env": "^9.5.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
