--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.1.2",
     "next-intl": "^3.9.4",
     "next-pwa": "^5.6.0",
+    "nodemailer": "^6.9.13",
     "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +33,7 @@
     "@types/lodash": "^4.14.202",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
