--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
