--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fujifilm-x-recipes",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3500",
@@ -17,11 +17,13 @@
     "@types/mdx": "^2.0.12",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "ajv": "^8.12.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "github-markdown-css": "^5.5.1",
     "immer": "^10.0.4",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
     "mongodb": "^6.4.0",
     "negotiator": "^0.6.3",
     "next": "14.1.2",
