--- a/package.json
+++ b/package.json
@@ -9,52 +9,60 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.4",
-    "@next/third-parties": "^14.1.4",
-    "@types/mdx": "^2.0.12",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "ajv": "^8.12.0",
-    "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.14",
-    "github-markdown-css": "^5.5.1",
-    "immer": "^10.0.4",
+    "@formatjs/intl-localematcher": "^0.5.10",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "15.4.1",
+    "@next/third-parties": "15.4.1",
+    "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "ajv": "^8.17.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.18.2",
+    "github-markdown-css": "^5.8.1",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
-    "mongodb": "^6.4.0",
-    "negotiator": "^0.6.3",
-    "next": "14.1.2",
-    "next-intl": "^3.9.4",
+    "mongodb": "^6.17.0",
+    "negotiator": "^0.6.4",
+    "next": "15.4.1",
+    "next-intl": "^3.26.5",
     "next-pwa": "^5.6.0",
-    "nodemailer": "^6.9.13",
-    "rc-slider": "^10.5.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "sharp": "^0.33.2",
+    "nodemailer": "^6.10.1",
+    "rc-slider": "^10.6.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sharp": "^0.33.5",
     "uuid": "^9.0.1",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/lodash": "^4.14.202",
-    "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash": "^4.17.20",
+    "@types/negotiator": "^0.6.4",
+    "@types/next-pwa": "^5.6.9",
+    "@types/node": "^20.19.8",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.18",
-    "daisyui": "^4.7.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.2",
-    "postcss": "^8",
-    "postcss-import": "^16.0.1",
-    "postcss-nesting": "^12.1.0",
-    "postcss-preset-env": "^9.5.2",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.46",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.4.1",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "postcss-nesting": "^12.1.5",
+    "postcss-preset-env": "^9.6.0",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8",
+      "@types/react-dom": "19.1.6"
+    }
   }
 }
