--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "fujifilm-x-recipes",
   "version": "1.1.1",
   "private": true,
+  "engines": {
+    "node": ">=22.17.0"
+  },
   "scripts": {
     "dev": "next dev -p 3500",
     "build": "next build",
