build: langchain, csv 관련 패키지 추가

--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.10",
+    "@langchain/community": "^0.3.49",
+    "@langchain/core": "^0.3.66",
+    "@langchain/google-genai": "^0.2.15",
+    "@langchain/ollama": "^0.2.3",
+    "@langchain/pinecone": "^0.2.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "15.4.1",
     "@next/third-parties": "15.4.1",
+    "@pinecone-database/pinecone": "^5.1.2",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -25,6 +31,7 @@
     "framer-motion": "^11.18.2",
     "github-markdown-css": "^5.8.1",
     "immer": "^10.1.1",
+    "langchain": "^0.3.30",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "mongodb": "^6.17.0",
@@ -33,6 +40,7 @@
     "next-intl": "^3.26.5",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
+    "papaparse": "^5.5.3",
     "rc-slider": "^10.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -48,13 +56,14 @@
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20.19.8",
     "@types/nodemailer": "^6.4.17",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.46",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.4.1",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.2",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^12.1.5",
