--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rc-slider": "^10.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "sharp": "^0.33.5",
     "uuid": "^9.0.1",
     "zustand": "^4.5.7"
