--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-markdown": "^10.1.0",
     "sharp": "^0.33.5",
     "uuid": "^9.0.1",
+    "zod": "^4.0.5",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
