--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.4.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.20",
@@ -67,6 +69,7 @@
     "daisyui": "^5.0.46",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.4.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^12.1.5",
