feat: @langchain/langgraph 패키지 추가 및 LLM 인스턴스 관리 개선
- 기존 langchain chain 방식 -> langgraph agent 방식 변경

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/community": "^0.3.49",
     "@langchain/core": "^0.3.66",
     "@langchain/google-genai": "^0.2.15",
+    "@langchain/langgraph": "^0.3.11",
     "@langchain/ollama": "^0.2.3",
     "@langchain/pinecone": "^0.2.0",
     "@mdx-js/loader": "^3.1.0",
