--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@formatjs/intl-localematcher": "^0.5.10",
     "@langchain/community": "^0.3.49",
     "@langchain/core": "^0.3.66",
@@ -39,7 +40,6 @@
     "negotiator": "^0.6.4",
     "next": "15.4.1",
     "next-intl": "^3.26.5",
-    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "papaparse": "^5.5.3",
     "rc-slider": "^10.6.2",
@@ -76,7 +76,8 @@
     "postcss-nesting": "^12.1.5",
     "postcss-preset-env": "^9.6.0",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "webpack": "^5.100.2"
   },
   "pnpm": {
     "overrides": {
