--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "next dev -p 3500",
+    "dev": "next dev --turbopack -p 3500",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
