--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "next dev --turbopack -p 3500",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -70,11 +73,15 @@
     "daisyui": "^5.0.46",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.4.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^12.1.5",
     "postcss-preset-env": "^9.6.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "webpack": "^5.100.2"
