feat: migrate LLM to Groq and improve structured output stability\n- Switch LLM from Google AI to Groq (Llama 3.3/3.1)\n- Implement manual JSON parsing and regex extraction for improved stability\n- Add response normalization and schema relaxation for Groq output\n- Improve error handling for 429 Rate Limits and timeouts\n- Fix SSE error bubbling and add friendly UI error messages

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@formatjs/intl-localematcher": "^0.5.10",
     "@langchain/community": "^0.3.49",
-    "@langchain/core": "^0.3.66",
+    "@langchain/core": "^1.1.19",
     "@langchain/google-genai": "^0.2.15",
+    "@langchain/groq": "^1.0.4",
     "@langchain/langgraph": "^0.3.11",
     "@langchain/ollama": "^0.2.3",
     "@langchain/pinecone": "^0.2.0",
